force-app/main/default/objects/Pr_f_rence_praticien__c/Pr_f_rence_praticien__c.object-meta.xml
<CustomObject>
    <label>Préférence praticien</label>
    <nameField>
        <displayFormat>PP-{0000}</displayFormat>
        <label>Nom</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Préférences praticien</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>