force-app/main/default/objects/Pr_f_rence_praticien__c/fields/Oui_Non__c.field-meta.xml
<CustomField>
    <fullName>Oui_Non__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Oui/Non</label>
    <type>Checkbox</type>
</CustomField>