force-app/main/default/objects/Pr_f_rence_praticien__c/fields/Pr_f_rence__c.field-meta.xml
<CustomField>
    <fullName>Pr_f_rence__c</fullName>
    <label>Préférence</label>
    <referenceTo>Preference__c</referenceTo>
    <relationshipLabel>Préférences praticien</relationshipLabel>
    <relationshipName>Pr_f_rences_praticien</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>