force-app/main/default/objects/Pr_f_rence_praticien__c/fields/Praticien__c.field-meta.xml
<CustomField>
    <fullName>Praticien__c</fullName>
    <label>Praticien</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Préférences praticien</relationshipLabel>
    <relationshipName>Pr_f_rences_praticien</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>